--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
       <div class="header-text">
         <!-- Counter Section -->
         <div class="counter">
-          攜手窮行 <span id="days-counter">0</span> 天
+          攜手同行 <span id="days-counter">0</span> 天
         </div>
 
         <!-- Title and Description -->
