update footer.html - typo mistake

--- a/layouts/_default/partials/footer.html
+++ b/layouts/_default/partials/footer.html
@@ -15,7 +15,7 @@
     {{- end }}
 
     <span>
-        翁強用愛發電
+        翁強用愛心發電
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
         <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a> 拔刀相助
     </span>
