--- a/layouts/_default/partials/footer.html
+++ b/layouts/_default/partials/footer.html
@@ -1,5 +1,11 @@
 {{- if not (.Param "hideFooter") }}
 <footer class="footer">
+    
+    <!-- Custom Tag Line -->
+    <div class="custom-tagline">
+        Your Custom Tag Line Here
+    </div>
+
     {{- if not site.Params.footer.hideCopyright }}
         {{- if site.Copyright }}
         <span>{{ site.Copyright | markdownify }}</span>
