--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
     <div class="header-content">
       <!-- Placeholder Image -->
       <div class="header-image">
-        <img src="/images/placeholder.jpg" alt="Header Image">
+        <img src="/images/lovelist-profile2.png" alt="Header Image">
       </div>
 
       <!-- Text Container -->
