--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,9 +15,9 @@
     {{- end }}
 
     <span>
-        Powered by Michael Yung
+        翁强用愛發電<br>
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a> 全力支持
     </span>
 </footer>
 {{- end }}
