--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -310,7 +310,8 @@ html body {
 
 /* Adjust the footer font size */
 .footer {
-  font-size: 25px; /* Change this value as needed */
+  font-size: 20px; /* Change this value as needed */
+  color: beige; /* font color */
 }
 
 /* Custom Tag Line Styles */
